# scientific-rag

./: .env.example  .gitignore  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: build_notebooks.py
notebooks/pipeline/: 00_pdf_extraction.ipynb  01_indexing.ipynb  02_retrieval.ipynb
src/scientific_rag/: __init__.py  config.py  utils.py
src/scientific_rag/full_load_scripts/: __init__.py  extract_pdfs.py  full_pipeline.py  index_documents.py  storage.py
src/scientific_rag/ingestion/: __init__.py  chunker.py
src/scientific_rag/orchestration/: __init__.py  chat_engine.py  guardrail.py  query_expander.py  session_store.py
src/scientific_rag/prompts/: answer_rag_prompt  extract_references_prompt  guardrail_prompt  query_expansion_conversational_prompt  query_expansion_prompt
src/scientific_rag/retrieval/: __init__.py  multi_query_rag.py  retriever.py  retriever_rerank.py
src/scientific_rag/vectorstore/: __init__.py  embedders.py  indexer.py
tests/: conftest.py  test_questions_comprehensive.py  test_quick.py  test_reranking.py
